users/38/38
gauravtouches: 38
  File "score.py", line 49
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
